Correctly implement a morty dancer subclass with a different color

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,8 +14,8 @@
     <div class="topbar">
       <span class="title"></span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Add a Blinky dancer!</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeMortyDancer">Add a Rick dancer!</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRickDancer">Add a Morty dancer!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeMortyDancer">Add a Morty dancer!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRickDancer">Add a Rick dancer!</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSummerDancer">Add a Summer dancer!</a>
     </div>
     <div class="background">
