--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,9 +14,10 @@
     <div class="topbar">
       <span class="title"></span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeBlinkyDancer">Add a Blinky dancer!</a>
-      <a href="#" class="addDancerButton"" data-dancer-maker-function-name="MakeMortyDancer">Add a Morty dancer!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeMortyDancer">Add a Morty dancer!</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeRickDancer">Add a Rick dancer!</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MakeSummerDancer">Add a Summer dancer!</a>
+      <a href="#" class="addLineupButton">Line Up!</a>
     </div>
     <div class="background">
       <img src="https://i.ytimg.com/vi/Wez2vwXGvJU/maxresdefault.jpg" alt="the garage">
